tests/negative/question_outside_result_fn.glyph
module neg

import std/result { Result, Ok, Err }

fn get() -> Result<number, string> {
  return Ok(1)
}

fn use_it() -> number {
  let x = get()?
  return x
}
